<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.wcs.liftsimulator.MainActivity">

    <Button
        android:id="@+id/button0"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="191dp"
        android:text="@string/floor0"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button0"
        android:layout_marginBottom="49dp"
        android:layout_toStartOf="@+id/button0"
        android:text="@string/floor1"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1"
        android:layout_centerHorizontal="true"
        android:text="@string/floor2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button2"
        android:layout_toEndOf="@+id/button0"
        android:text="@string/floor3"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignStart="@+id/button1"
        android:text="@string/floor4"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_toStartOf="@+id/button3"
        android:text="@string/floor5"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignEnd="@+id/button3"
        android:text="@string/floor6"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:text="@string/floor7"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button5"
        android:layout_toEndOf="@+id/button4"
        android:text="@string/floor8"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button6"
        android:layout_toEndOf="@+id/button8"
        android:text="@string/floor9"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/floor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="58dp"
        android:text="@string/etage"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/floor_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/floor"
        android:layout_toEndOf="@+id/floor"
        android:text="@string/floor"
        android:layout_marginLeft="2dp"
        android:textSize="18sp" />
</RelativeLayout>
